force-app/main/default/objects/Market_Top_Site__c/Market_Top_Site__c.object-meta.xml
<CustomObject>
    <description>Structured top recommended sites linked to a market analysis.</description>
    <label>Market Top Site</label>
    <nameField>
        <displayFormat>MTS-{0000}</displayFormat>
        <label>Top Site Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Top Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>