force-app/main/default/objects/Market_Top_Site__c/fields/Market_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Market_Analysis__c</fullName>
    <label>Market Analysis</label>
    <referenceTo>Market_Analysis__c</referenceTo>
    <relationshipLabel>Top Sites</relationshipLabel>
    <relationshipName>Top_Sites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>